--- a/courses.html
+++ b/courses.html
@@ -32,7 +32,7 @@
             font-family: 'Nunito', sans-serif;
             color: #f0f0f0;
             overflow-x: hidden;
-            padding-top: 60px;
+            padding-top: 60px; /* Account for fixed navbar */
         }
         /* Optional: Body scroll lock style (if re-enabled in JS) */
         /*
@@ -52,14 +52,13 @@
             left: 0;
             z-index: 1000;
             display: flex;
-            justify-content: center;
+            justify-content: center; /* Centers .nav-container */
             align-items: center;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
         }
 
         .nav-container {
             display: flex;
-            /* justify-content: space-between; /* Replaced */
             justify-content: center; /* Center items horizontally by default (for desktop links) */
             align-items: center;
             width: 100%;
@@ -100,7 +99,7 @@
             cursor: pointer;
             padding: 10px;
             z-index: 1002;
-            position: relative;
+            position: relative; /* Helps z-index */
         }
 
         .hamburger-menu div {
@@ -117,15 +116,17 @@
             position: fixed;
             top: -100vh; /* Start off-screen */
             left: 0;
-            background-color: rgba(255, 255, 255, 0.97); /* Slightly less transparent */
+            /* Restored Transparency */
+            background-color: rgba(255, 255, 255, 0.95); /* Back to 0.95 alpha */
             width: 100%;
-            height: calc(100vh - 60px);
+            height: calc(100vh - 60px); /* Full height minus navbar */
             flex-direction: column;
             justify-content: center;
             align-items: center;
             gap: 30px;
-            transition: top 0.4s ease-in-out;
-            z-index: 1001;
+            /* Updated Transition for smoother slide */
+            transition: top 0.5s cubic-bezier(0.4, 0, 0.2, 1); /* Longer duration + smoother curve */
+            z-index: 1001; /* Above content, below hamburger if needed */
         }
 
         .mobile-nav.active {
@@ -190,6 +191,7 @@
             opacity: 0; /* Start hidden */
             animation: fadeInUp 0.6s ease-out forwards;
         }
+        /* Stagger animation delays */
         .courses-container .course-card:nth-child(1) { animation-delay: 0.2s; }
         .courses-container .course-card:nth-child(2) { animation-delay: 0.3s; }
         .courses-container .course-card:nth-child(3) { animation-delay: 0.4s; }
@@ -199,18 +201,19 @@
 
         .course-card:hover {
             transform: scale(1.05);
-            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.5), 0 0 10px #00bcd4;
+            /* Enhanced Glow Effect */
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.5), 0 0 18px #00bcd4; /* Increased glow size */
         }
 
         .course-card img {
-            display: block;
+            display: block; /* Prevent extra space below image */
             width: 100%;
             height: auto;
             transition: filter 0.3s ease-out;
         }
 
         .course-card:hover img {
-             filter: brightness(50%);
+             filter: brightness(50%); /* Darken image on hover */
         }
 
         .course-card .overlay {
@@ -219,13 +222,13 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: rgba(0, 0, 0, 0.5);
+            background-color: rgba(0, 0, 0, 0.5); /* Base overlay */
             z-index: 1;
             transition: background-color 0.3s ease-out;
         }
 
         .course-card:hover .overlay {
-            background-color: rgba(0, 0, 0, 0.7);
+            background-color: rgba(0, 0, 0, 0.7); /* Darker overlay on hover */
         }
 
         /* Text Overlay - Now always visible */
@@ -236,18 +239,17 @@
             transform: translate(-50%, -50%);
             text-align: center;
             color: #fff;
-            width: 90%;
-            z-index: 2;
-            /* Opacity rules removed - text is always visible */
-            /* transition: opacity 0.4s ease-out; /* Removed opacity transition */
+            width: 90%; /* Prevent text spilling */
+            z-index: 2; /* Above overlay */
+            /* Text is always visible (opacity rules removed) */
         }
 
         /* Text styling within the overlay */
         .text-overlay h3 {
             font-size: 1.5rem;
             margin-bottom: 10px;
-            color: #00bcd4;
-            text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
+            color: #00bcd4; /* Cyan heading */
+            text-shadow: 1px 1px 3px rgba(0,0,0,0.7); /* Readability shadow */
         }
 
         .text-overlay p {
@@ -255,10 +257,10 @@
             color: #f0f0f0;
             margin-bottom: 0;
             line-height: 1.4;
-            text-shadow: 1px 1px 3px rgba(0,0,0,0.7);
+            text-shadow: 1px 1px 3px rgba(0,0,0,0.7); /* Readability shadow */
         }
 
-        /* Button Styling (if used) */
+        /* Button Styling (defined but not used in current cards) */
         .button {
             display: inline-block;
             margin-top: 15px;
@@ -283,14 +285,14 @@
             font-size: 0.9rem;
             color: #aaa;
             width: 100%;
-            margin-top: 40px;
+            margin-top: 40px; /* Space above footer */
         }
 
 
         /* --- Media Queries --- */
         @media (max-width: 768px) {
             nav {
-                padding: 0 10px;
+                padding: 0 10px; /* Adjust padding */
             }
 
             .nav-container {
@@ -306,18 +308,26 @@
             }
 
              .intro h2 {
-                font-size: 1.8rem;
+                font-size: 1.8rem; /* Adjust heading size */
             }
              .intro p {
-                font-size: 1rem;
+                font-size: 1rem; /* Adjust text size */
             }
+             /* Consider disabling entry animations on mobile if needed */
+             /*
+             .intro, .course-card {
+                 animation: none;
+                 opacity: 1;
+             }
+             */
 
             .courses-container {
-                grid-template-columns: 1fr; /* Stack cards */
-                padding: 15px;
-                 gap: 15px;
+                grid-template-columns: 1fr; /* Stack cards vertically */
+                padding: 15px; /* Adjust padding */
+                 gap: 15px; /* Adjust gap */
             }
 
+             /* Adjust text size in cards for mobile */
             .text-overlay h3 {
                 font-size: 1.3rem;
             }
@@ -327,6 +337,7 @@
         }
 
         @media (min-width: 769px) {
+            /* Ensure hamburger is hidden on larger screens */
             .hamburger-menu {
                 display: none;
             }
@@ -388,32 +399,31 @@
                  <p>This is another course description.</p>
             </div>
         </div>
-    </div>
+        </div>
 
     <footer>
         <p>© 2025 Jesús Lopez Aguilar | All rights reserved</p>
     </footer>
 
     <script>
+        // Toggles the mobile navigation menu
         function toggleMenu() {
-            // --- Temporary Test ---
-             alert('Hamburger clicked!'); // Add this line for testing. REMOVE IT after confirming the click works.
-            // --- End Temporary Test ---
-
+            // ALERT REMOVED - No popup should appear now
             const mobileNav = document.getElementById('mobile-nav');
             mobileNav.classList.toggle('active');
 
-            // Temporarily commented out optional body scroll lock
+            // Optional: Toggle body scroll lock (if CSS for .no-scroll is added)
             // document.body.classList.toggle('no-scroll');
         }
 
-        // Optional: Close mobile menu if a link is clicked - Keep this part
+        // Adds event listeners to mobile nav links to close menu on click
         document.querySelectorAll('.mobile-nav a').forEach(link => {
             link.addEventListener('click', () => {
                 const mobileNav = document.getElementById('mobile-nav');
+                // Check if menu is active before trying to close
                 if (mobileNav.classList.contains('active')) {
                     mobileNav.classList.remove('active');
-                    // Also remove scroll lock if it was active
+                    // Also remove scroll lock if it was active and CSS exists
                     // document.body.classList.remove('no-scroll');
                 }
             });
