--- a/courses.html
+++ b/courses.html
@@ -32,7 +32,7 @@
             font-family: 'Nunito', sans-serif;
             color: #f0f0f0;
             overflow-x: hidden;
-            padding-top: 60px; /* Account for fixed navbar */
+            padding-top: 60px; /* Default padding for Desktop navbar */
             transition: background-color 0.3s ease;
         }
 
@@ -44,19 +44,19 @@
         /* Navbar */
         nav {
             background-color: white;
-            height: 60px;
+            height: 60px; /* Default Desktop height */
             padding: 0 20px;
             width: 100%;
             position: fixed;
             top: 0;
             left: 0;
             right: 0;
-            z-index: 1000; /* Below mobile nav and hamburger */
+            z-index: 1000; /* Below hamburger */
             display: flex;
             justify-content: center;
             align-items: center;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
-            transition: padding 0.3s ease;
+            transition: padding 0.3s ease, height 0.3s ease; /* Added height transition */
         }
 
          .nav-container {
@@ -72,7 +72,7 @@
             gap: 20px;
             margin: 0;
             padding: 0;
-            display: flex; /* Default display (overridden in mobile query) */
+            display: flex; /* Default display */
             justify-content: center;
         }
 
@@ -101,11 +101,11 @@
             flex-direction: column;
             cursor: pointer;
             padding: 10px;
-            z-index: 1100; /* Above everything else */
+            z-index: 1100; /* Above everything */
             position: fixed;
-            top: 10px;
-            right: 15px;
-            transition: transform 0.3s ease;
+            top: 10px;      /* Default Desktop position */
+            right: 15px;     /* Default Desktop position */
+            transition: transform 0.3s ease, top 0.3s ease, right 0.3s ease; /* Added top/right transition */
         }
 
         .hamburger-menu div {
@@ -117,29 +117,26 @@
             transition: transform 0.3s ease, background-color 0.3s ease;
         }
 
-        /* Mobile Menu - Changed back to position:fixed and transform animation */
+        /* Mobile Menu */
         .mobile-nav {
-            display: flex; /* Use flex for layout by default */
-            position: fixed; /* Changed back to fixed */
-            top: 0;          /* Anchor to top of viewport */
-            left: 0;         /* Anchor to left of viewport */
-            right: 0;        /* Anchor to right (makes width 100%) */
-            background-color: rgba(255, 255, 255, 0.9); /* Reference background */
-            width: 100%;    /* Explicit width */
-            height: 100vh;   /* Full viewport height */
+            display: flex; /* Always flex now */
+            position: fixed; /* Use fixed for viewport positioning */
+            top: 0;
+            left: 0;
+            right: 0;
+            background-color: rgba(255, 255, 255, 0.9);
+            width: 100%;
+            height: 100vh;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             gap: 30px;
             padding: 10px 0;
             z-index: 1001; /* Below hamburger */
-            /* Hide using transform and opacity */
             opacity: 0;
             transform: translateY(-100%);
-            visibility: hidden; /* Use visibility for accessibility */
-            /* Transition transform and opacity */
+            visibility: hidden;
             transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s ease-out, visibility 0s linear 0.5s;
-            /* Delay hiding visibility until transition ends */
         }
 
         .mobile-nav a {
@@ -147,7 +144,6 @@
             font-size: 1.5rem;
             font-weight: 600;
             text-decoration: none;
-            /* Parent container handles opacity fade */
             transition: color 0.3s, text-shadow 0.3s, transform 0.3s;
         }
 
@@ -157,65 +153,36 @@
             text-shadow: 0 0 8px #00bcd4;
             transform: scale(1.1);
         }
-        /* Glow on tap (mobile) */
-        .mobile-nav a:active {
+
+        /* Class added by JS for tap glow */
+        .mobile-nav a.link-active-glow {
             color: #00bcd4;
             text-shadow: 0 0 8px #00bcd4;
         }
+        /* Removed CSS :active rule */
 
 
         /* Show mobile nav when active */
         .mobile-nav.active {
             opacity: 1;
             transform: translateY(0); /* Slide into view */
-            visibility: visible; /* Make it visible */
+            visibility: visible;
             transition: transform 0.5s cubic-bezier(0.4, 0, 0.2, 1), opacity 0.5s ease-out, visibility 0s linear 0s;
-            /* Make visible immediately when activating */
         }
-        /* Rule for .mobile-nav.active a {} removed */
-
 
         /* Introduction Text */
-        .intro {
-            text-align: center;
-            margin: 30px 20px;
-            padding: 30px;
-            background-color: #333;
-            color: #fff;
-            border-radius: 10px;
-            line-height: 1.6;
-            opacity: 0;
-            animation: fadeInUp 0.6s 0.1s ease-out forwards;
-        }
+        .intro { text-align: center; margin: 30px 20px; padding: 30px; background-color: #333; color: #fff; border-radius: 10px; line-height: 1.6; opacity: 0; animation: fadeInUp 0.6s 0.1s ease-out forwards; }
         .intro h2 { font-size: 2rem; margin-bottom: 20px; }
         .intro p { font-size: 1.1rem; margin-bottom: 20px; }
 
         /* Courses Content */
-        .courses-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 20px;
-            padding: 20px;
-        }
-        .course-card {
-            position: relative;
-            background-color: #333;
-            overflow: hidden;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
-            transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
-            opacity: 0;
-            animation: fadeInUp 0.6s ease-out forwards;
-        }
+        .courses-container { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 20px; padding: 20px; }
+        .course-card { position: relative; background-color: #333; overflow: hidden; border-radius: 10px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); transition: transform 0.3s ease-out, box-shadow 0.3s ease-out; opacity: 0; animation: fadeInUp 0.6s ease-out forwards; }
         .courses-container .course-card:nth-child(1) { animation-delay: 0.2s; }
         .courses-container .course-card:nth-child(2) { animation-delay: 0.3s; }
         .courses-container .course-card:nth-child(3) { animation-delay: 0.4s; }
         .courses-container .course-card:nth-child(4) { animation-delay: 0.5s; }
-
-        .course-card:hover {
-            transform: scale(1.05);
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.5), 0 0 18px #00bcd4; /* Enhanced glow */
-        }
+        .course-card:hover { transform: scale(1.05); box-shadow: 0 8px 15px rgba(0, 0, 0, 0.5), 0 0 18px #00bcd4; }
         .course-card img { display: block; width: 100%; height: auto; transition: filter 0.3s ease-out; }
         .course-card:hover img { filter: brightness(50%); }
         .course-card .overlay { position: absolute; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(0, 0, 0, 0.5); z-index: 1; transition: background-color 0.3s ease-out; }
@@ -242,12 +209,26 @@
             .hamburger-menu {
                 display: flex; /* Show fixed hamburger */
             }
-            /* Removed .mobile-nav { display: flex; } - It's always flex now */
+            /* .mobile-nav is always flex now */
 
              .nav-container {
-                 /* Hamburger is fixed, so nav content can center */
-                 justify-content: center;
+                 justify-content: center; /* Center nav content */
              }
+
+            /* --- Navbar Size/Alignment Fixes for Mobile --- */
+            nav {
+                height: 50px; /* Reduced height */
+            }
+            body {
+                padding-top: 50px; /* Match reduced navbar height */
+            }
+            .hamburger-menu {
+                /* Adjust position slightly for new 50px height */
+                top: 10px; /* Vertically centered (50px - 30px icon)/2 */
+                right: 12px; /* Slightly more inset */
+            }
+            /* --- End Navbar Fixes --- */
+
              .intro h2 { font-size: 1.8rem; }
              .intro p { font-size: 1rem; }
              .courses-container { grid-template-columns: 1fr; padding: 15px; gap: 15px; }
@@ -260,8 +241,7 @@
              .hamburger-menu {
                  display: none; /* Hide fixed hamburger */
              }
-             /* No need to hide .mobile-nav display:none here, it's hidden via opacity/transform */
-
+             /* .mobile-nav is hidden via transform/opacity */
              #nav-links {
                  display: flex; /* Ensure desktop links shown */
              }
@@ -284,7 +264,7 @@
 <body>
     <nav>
          <div class="nav-container">
-             <ul id="nav-links">
+            <ul id="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="courses.html">Courses</a></li>
@@ -329,11 +309,7 @@
         function toggleMenu() {
             const mobileNav = document.getElementById('mobile-nav');
             const body = document.body;
-
-            // Toggle the 'active' class on the mobile navigation panel
             mobileNav.classList.toggle('active');
-
-            // Toggle the 'no-scroll' class on the body
             if (mobileNav.classList.contains('active')) {
                 body.classList.add('no-scroll');
             } else {
@@ -341,17 +317,41 @@
             }
         }
 
-        // Add event listeners to mobile nav links to close menu on click
+        // --- Touch Event Listeners for Mobile Glow ---
         document.querySelectorAll('.mobile-nav a').forEach(link => {
+            let touchInitiated = false; // Flag to ensure glow happens on actual tap
+
+            link.addEventListener('touchstart', function(event) {
+                // Use 'this' which refers to the link element
+                this.classList.add('link-active-glow');
+                touchInitiated = true; // Mark that touch started on this element
+            }, { passive: true }); // Use passive: true if not preventing default
+
+            link.addEventListener('touchend', function() {
+                // Remove glow class after touch ends
+                if (touchInitiated) {
+                    this.classList.remove('link-active-glow');
+                    touchInitiated = false;
+                }
+            });
+
+            link.addEventListener('touchcancel', function() { // Handle if touch moves off element etc.
+                 if (touchInitiated) {
+                    this.classList.remove('link-active-glow');
+                    touchInitiated = false;
+                 }
+            });
+
+            // --- Keep existing click listener for closing menu ---
             link.addEventListener('click', () => {
                 const mobileNav = document.getElementById('mobile-nav');
-                // Check if menu is active before trying to close
                 if (mobileNav.classList.contains('active')) {
-                    // Close the menu
                     mobileNav.classList.remove('active');
-                    // Remove the scroll lock from the body
                     document.body.classList.remove('no-scroll');
                 }
+                // Ensure glow is removed if click finishes faster than touchend
+                 link.classList.remove('link-active-glow');
+                 touchInitiated = false;
             });
         });
     </script>
